try to fix overlap

--- a/style.css
+++ b/style.css
@@ -117,6 +117,10 @@ body {
   max-height: 600px;
   object-fit: cover;
 }
+.carousel-inner .row {
+  padding: 0 3rem; 
+}
+
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
